<resources>
    <string name="app_name">ParkingBGomez</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="menuItem1">Inicio</string>
    <string name="menuItem2">Reservar</string>
    <string name="menuItem3">Reservas</string>
    <string name="menuItem4">Cuenta</string>
    <string name="accessible_car">Coche adaptado</string>
    <string name="car">Coche</string>
    <string name="motorcycle">Moto</string>
    <string name="electric_car">Coche electrico</string>
    <string name="select_slot_text">Selecciona el tipo de plaza</string>
    <string name="select_date">Selecciona la fecha</string>
    <string name="select_horario">Selecciona horario</string>
    <string name="continue_label">Continuar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_reservar_confirm">Por favor, recuerda liberar la plaza antes de que finalize tu reserva para que otros puedan disfrutar de ella después de ti.</string>
    <string name="reservar_label">Reservar</string>
    <string name="confirmation_label">Confirmación</string>
    <string name="parking_zuatzu">Parking Zuatzu - Parque de Empresas</string>
    <string name="no_reservas">No hay reservas para este día</string>
    <string name="tipo_plaza_icon">Icono del tipo de plaza</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
    <string name="yesterday">Ayer</string>
    <string name="ver_todas">Ver todas</string>
    <string name="proximas_reservas">Proximas Reservas</string>
    <string name="parque_empresarial_zuatzu">Parque Empresarial Zuatzu</string>
    <string name="donostia_san_sebastian_gipuzkoa">20018 Donostia-San Sebastian, Gipuzkoa</string>
    <string name="navegar">Navegar</string>
    <string name="no_hay_reservas">No tienes reservas activas</string>
    <string name="plazas_libres_es_estos_momentos">Plazas libres es estos momentos</string>
    <string name="cancelar_reserva">Cancelar reserva</string>
    <string name="editar_reserva">Editar reserva</string>
    <string name="modify_reserva">Modifica tu reserva</string>
    <string name="boton_para_a_adir_nueva_reserva">Boton para añadir nueva reserva</string>
    <string name="nueva_reserva">Nueva reserva</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Email no válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"El correo electrónico o contraseña son incorrectos"</string>
    <string name="login_failed_google">"No pudimos verificar tu identidad. Inténtalo más tarde"</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="por_favor_inicia_sesion">Por favor, inicia sesión para continuar</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="register">Registrese</string>
    <string name="no_account">¿No tiene una cuenta?</string>
    <string name="user_avatar">Avatar del usuario</string>
    <string name="logout">Cerrar sesión</string>
    <string name="reset_password">Restablecer contraseña</string>
    <string name="please_insert_email">Por favor introduzca su correo electrónico</string>
    <string name="already_have_account">¿Ya tiene una cuenta?</string>
    <string name="login">Iniciar sesión</string>
    <string name="reset_password_email_text">Tu solicitud para restablecer la contraseña ha sido procesada. Pronto recibirás instrucciones por correo electrónico. Por favor, revisa tu bandeja de entrada.</string>
    <string name="finish">Finalizar</string>
    <string name="create_account">Crea tu cuenta</string>
    <string name="create_account_btn">Crear cuenta</string>
    <string name="sign_in_with_google">Continúa con Google</string>
    <string name="info_label">Info label</string>
    <string name="max_hours_text">Máximo 8 horas por reserva</string>
    <string name="card_more_info">Haz clic en una reserva para más información</string>
    <string name="error_loading_reservas">Error al cargar la reserva. Intentalo de nuevo más tarde</string>
    <string name="cambiar_reserva">Cambiar reserva</string>
    <string name="reserva_anterior">Reserva anterior</string>
    <string name="no_possible_label">No se puede ni editar ni cancelar una reserva que ya ha pasado</string>
</resources>