<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lksnext.ParkingBGomez.view.activity.MainActivity">
    <item
        android:id="@+id/inicioMainFragment"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/menuItem1"/>
    <item
        android:id="@+id/reservarMainFragment"
        android:enabled="true"
        android:icon="@drawable/directions_car"
        android:title="@string/menuItem2"/>
    <item
        android:id="@+id/reservasMainFragment"
        android:enabled="true"
        android:icon="@drawable/bookmark"
        android:title="@string/menuItem3"/>
    <item
        android:id="@+id/cuentaMainFragment"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/menuItem4"/>
</menu>