<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ReservarMainFragment">

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_car"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/car"
            app:chipIcon="@drawable/directions_car_fill"
            app:checkedIcon="@drawable/directions_car_fill"
            app:chipIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_accessible_car"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessible_car"
            app:chipIcon="@drawable/accessible_forward_fill"
            app:checkedIcon="@drawable/accessible_forward_fill"
            app:chipIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_motorcycle"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motorcycle"
            app:chipIcon="@drawable/motorcycle_fill"
            app:checkedIcon="@drawable/motorcycle_fill"
            app:chipIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_electric_car"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electric_car"
            app:chipIcon="@drawable/electric_car_fill"
            app:checkedIcon="@drawable/electric_car_fill"
            app:chipIconVisible="true"/>

    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>